--- a/Frontend/sass/_general.scss
+++ b/Frontend/sass/_general.scss
@@ -10,6 +10,7 @@ sans-serif;
 
 .card {
   border: 0;
+  border-radius: 10px;
 }
 
 .max-width-420 {
@@ -27,6 +28,7 @@ sans-serif;
     color: $black;
     opacity: 0;
     transition: all .5s ease-in-out;
+    margin-left: 30px;
   }
 
   .form-control {
@@ -34,7 +36,7 @@ sans-serif;
     background-color: #F2F2F2;
     font-size: 18px;
     color: $black;
-    border-radius: 5px;
+    border-radius: 40px;
     outline: none !important;
 
     &::placeholder {
@@ -181,6 +183,30 @@ sans-serif;
   }
 }
 
+.title-2 {
+  font-size: 36px;
+  font-family: $font;
+  font-weight: 800;
+  color: #262626;
+
+  @media(max-width:1200px) {
+    font-size: 30px;
+  }
+
+  @media(max-width:992px) {
+    font-size: 26px;
+  }
+}
+
+.title-3 {
+  font-size: 30px;
+  font-family: $font;
+  font-weight: 800;
+  color: #262626;
+
+
+}
+
 .subtitle {
   font-size: 20px;
   font-family: $font;
@@ -254,12 +280,147 @@ sans-serif;
   margin-right: auto;
 }
 
+.max-width-300 {
+  max-width: 300px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.max-width-200 {
+  max-width: 200px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.min-width-260 {
+  min-width: 260px !important;
+}
+
 .max-width-830 {
   max-width: 830px !important;
   margin-left: auto;
   margin-right: auto;
 }
 
+.max-width-880 {
+  max-width: 880px !important;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .min-height-60vh {
   min-width: 60vh;
+}
+
+.custom-link {
+  font-size: 14px;
+  font-family: $font;
+  text-decoration: underline;
+  font-weight: 700;
+  transition: color .5s ease-in-out;
+  color: $black;
+
+  &-2 {
+    color: $green-light;
+  }
+
+  i {
+    font-size: 16px;
+  }
+
+  &:hover {
+    color: $green;
+  }
+}
+
+.steps {
+  display: flex;
+
+  &__item {
+    display: inline-block;
+    width: 54px;
+    height: 54px;
+    border-radius: 40px;
+    background-color: $green;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: $white;
+    font-size: 22px;
+    margin-left: 10px;
+    margin-right: 10px;
+    position: relative;
+
+    @media (max-width:767px) {
+      width: 44px;
+      height: 44px;
+      font-size: 20px;
+    }
+
+    &:before,
+    &:after {
+      content: "";
+      display: block;
+      width: 15px;
+      height: 4px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: $green;
+    }
+
+    &:before {
+      left: -10px;
+    }
+
+    &:after {
+      right: -10px;
+    }
+
+    &:last-child {
+      &:after {
+        display: none;
+      }
+    }
+
+    &:first-child {
+      &:before {
+        display: none;
+      }
+    }
+
+    &.active {
+      background-color: $green-light;
+
+      &:before,
+      &:after {
+        background-color: $green-light;
+      }
+
+      span {
+        width: 0;
+        height: 0;
+        border-bottom: 32px solid $white;
+        border-left: 43px solid transparent;
+        position: absolute;
+        bottom: -40px;
+        left: -16px;
+
+        @media (max-width:767px) {
+          border-bottom: 32px solid $white;
+          border-left: 36px solid transparent;
+        }
+      }
+    }
+
+    &.undone {
+      background-color: $white;
+      color: $black;
+
+      &:before,
+      &:after {
+        background-color: $white;
+      }
+    }
+  }
 }
